--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.0.1",
   "description": "IoT demo application",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha --reporter xunit-file"
   },
   "dependencies": {
     "cfenv": "^1.0.0",
     "express": "^4.12.4",
     "jade": "^1.10.0"
   },
-  "repository": {}
+  "repository": {},
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": { 
+    "mocha": "^2.2.3",
+    "xunit-file": "^0.0.7"},
+  "keywords": [],
+  "author": "Alberto Gaytan",
+  "license": "ISC"
 }
